--- a/DuckTalk-CLI/DuckTalk-CLI.vcxproj.filters
+++ b/DuckTalk-CLI/DuckTalk-CLI.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="DuckTalk-CLI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="requests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="requests.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
